# recon-backend

./: .env.example  .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  conftest.py  pyproject.toml  pytest.ini
DOCS/: migration-log.md
backend/alembic/: env.py
backend/alembic/versions/: 2026-03-29-15-46_8e07908dfe79.py  2026-03-29-15-56_3b36853a3dd9.py  2026-03-30-14-18_b49571b8bc83.py  2026-03-30-16-01_4bda72c9a195.py  2026-04-04-05-10_6b1ab85af142.py  2026-04-04-19-10_d1f2a3b4c5d6.py  2026-04-04-23-39_4c208084908b.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/routers/: auth.py  r2.py  users.py
backend/app/controllers/: auth_controller.py  r2_controller.py  user_controller.py
backend/app/core/: config.py  oauth.py  security.py
backend/app/db/: database.py  post_commit.py
backend/app/domains/announcements/controller/: __init__.py  announcement_controller.py
backend/app/domains/announcements/crud/: __init__.py  announcement.py
backend/app/domains/announcements/models/: __init__.py  announcement.py
backend/app/models/: __init__.py  base.py  oauth_account.py  refresh_token.py  user.py
backend/app/partners/crud/: partner.py
backend/app/partners/service/: partner_service.py
backend/app/partners/tests/: test_partner_router.py
backend/app/schemas/: auth.py  user.py
backend/app/services/: auth_service.py  r2_service.py  user_service.py
backend/app/utils/: deps.py  exceptions.py  rbac.py
backend/app/utils/models/: base.py
backend/tests/: conftest.py
(+54 files in other folders)
